--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="row">
         <div class="col-12 menu">
           <ul>
-            <li><a href="../../familyTree/trishtworld_NAVWEB/index.html">trishtworld</a></li>
-            <li><a href="../../familyTree/皇位繼承譜系_NAVWEB/index.html">Ange's Family</s></s></a></li>
+            <li><a href="../SpaceStation/familyTree/trishtworld_NAVWEB/index.html">trishtworld</a></li>
+            <li><a href="../SpaceStation/familyTree/皇位繼承譜系_NAVWEB/index.html">Ange's Family</s></s></a></li>
             <li><a href="#contact">Contact us</a></li>
             <li><a href="service.html">Our Service</a></li>
             <li><a href="staffc19.html">Staff</a></li>
