--- a/familyTree/trishtworld_NAVWEB/media.html
+++ b/familyTree/trishtworld_NAVWEB/media.html
@@ -25,7 +25,7 @@
 					<li><a href="index.html" title="姓氏">姓氏</a></li>
 					<li class = "CurrentSection"><a href="media.html" title="媒體">媒體</a></li>
 					<li><a href="thumbnails.html" title="縮圖">縮圖</a></li>
-					<li><a href="SpaceStation/index.html" title="SpaceStation">SpaceStation</a></li>
+					<li><a href="https://shinnanmisa.github.io/SpaceStation" title="SpaceStation">SpaceStation</a></li>
 				</ul>
 			</div>
 		</div>
